# echoform

./: .gitignore  CMakeLists.txt  PLUGIN_GUIDE.md  PluginEditor.h  PluginProcessor.h  README.md  echoform.code-workspace  habit_juce_roadmap.md  implementation.md  roadmap.md
build_xcode/: CMakeCache.txt  cmake_install.cmake
build_xcode/CMakeScripts/: ReRunCMake.make
build_xcode/JUCE/: JUCEExportConfig.cmake  cmake_install.cmake
build_xcode/JUCE/CMakeScripts/: ReRunCMake.make
build_xcode/JUCE/JUCE.xcodeproj/: project.pbxproj
build_xcode/JUCE/modules/: cmake_install.cmake
build_xcode/JUCE/tools/: CMakeCache.txt  JUCEExportConfig.cmake  JUCEToolsExport.cmake  cmake_install.cmake
build_xcode/Release/: StereoMemoryDelay_vst3_helper
build_xcode/StereoMemoryDelay.xcodeproj/: project.pbxproj
build_xcode/StereoMemoryDelay_artefacts/JuceLibraryCode/: Info.txt  (+1 more)
docs/: UI_CONTRACT.md
resources/: visualdna_tokens.json
resources/component_specs/: feedback_knob.json
src/: DeterminismTest.cpp  InspectPanel.cpp  InspectPanel.h  MemoryBuffer.h  MemoryDelayEngine.cpp  MemoryDelayEngine.h  Modifiers.h  Playhead.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  RandomGenerator.h  TokenLookAndFeel.cpp  TokenLookAndFeel.h
tests/: MemoryDelayEngineTests.cpp
ui_runtime/: ComponentNode.h  ComponentSpec.h  ComponentSpecLoader.cpp  ComponentSpecLoader.h  ComponentSpecRuntime.cpp  ComponentSpecRuntime.h  JUCEComponentRenderer.cpp  JUCEComponentRenderer.h  Layer.h  RendererInterface.h  StateMachine.h  TokenLoader.cpp  TokenLoader.h  TokenSet.h
(+8 files in other folders)
